.provarCaches/00D410000011HE0EAM/objects/rstk__icfcst__c.object
<CustomObject>
    <description>icfcst__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icfcst_division__c +&apos;_&apos;+ rstk__icfcst_factory__c +&apos;_&apos;+  rstk__icfcst_item__c +&apos;_&apos;+  TEXT(rstk__icfcst_procseq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icfcst_factory__c + &apos;-&apos; +  rstk__icfcst_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_division__c</fullName>
        <label>Division Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_factory__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Factory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_forecast01__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Column 01</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_forecast02__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Column 02</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_forecast03__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Column 03</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>icfcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_maxqty__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_maxqty_t__c</fullName>
        <label>Max Qty</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_procseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_supplier__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_sydiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Forecast Upload in Original Format</relationshipLabel>
        <relationshipName>icfcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_tsl_t__c</fullName>
        <label>TSL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icfcst_tslqty__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Forecast Upload in Original Format</label>
    <listViews>
        <fullName>rstk__Current_Forecast_Upload</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icfcst_procseq__c</columns>
        <columns>rstk__icfcst_item__c</columns>
        <columns>rstk__icfcst_icitem__c</columns>
        <columns>rstk__icfcst_sydiv__c</columns>
        <columns>rstk__icfcst_division__c</columns>
        <columns>rstk__icfcst_desc__c</columns>
        <columns>rstk__icfcst_factory__c</columns>
        <columns>rstk__icfcst_forecast01__c</columns>
        <columns>rstk__icfcst_forecast02__c</columns>
        <columns>rstk__icfcst_forecast03__c</columns>
        <columns>rstk__icfcst_forecast04__c</columns>
        <columns>rstk__icfcst_maxqty_t__c</columns>
        <columns>rstk__icfcst_tsl_t__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__icfcst_procseq__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Current Forecast Upload</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Forecast_Original</fullName>
        <columns>NAME</columns>
        <columns>rstk__icfcst_sydiv__c</columns>
        <columns>rstk__icfcst_division__c</columns>
        <columns>rstk__icfcst_procseq__c</columns>
        <columns>rstk__icfcst_desc__c</columns>
        <columns>rstk__icfcst_factory__c</columns>
        <columns>rstk__icfcst_forecast01__c</columns>
        <columns>rstk__icfcst_forecast02__c</columns>
        <columns>rstk__icfcst_forecast03__c</columns>
        <columns>rstk__icfcst_forecast04__c</columns>
        <columns>rstk__icfcst_icitem__c</columns>
        <columns>rstk__icfcst_item__c</columns>
        <columns>rstk__icfcst_tslqty__c</columns>
        <columns>rstk__icfcst_supplier__c</columns>
        <filterScope>Everything</filterScope>
        <label>Forecast - Original</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Forecast_Upload_in_Original_Format</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icfcst_procseq__c</columns>
        <columns>rstk__icfcst_item__c</columns>
        <columns>rstk__icfcst_icitem__c</columns>
        <columns>rstk__icfcst_sydiv__c</columns>
        <columns>rstk__icfcst_desc__c</columns>
        <columns>rstk__icfcst_factory__c</columns>
        <columns>rstk__icfcst_forecast01__c</columns>
        <columns>rstk__icfcst_forecast02__c</columns>
        <columns>rstk__icfcst_forecast03__c</columns>
        <columns>rstk__icfcst_forecast04__c</columns>
        <columns>rstk__icfcst_forecast05__c</columns>
        <columns>rstk__icfcst_forecast06__c</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Forecast Upload in Original Format</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__marty</fullName>
        <columns>rstk__icfcst_procseq__c</columns>
        <columns>rstk__icfcst_desc__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__icfcst_factory__c</columns>
        <columns>rstk__icfcst_forecast01__c</columns>
        <columns>rstk__icfcst_forecast02__c</columns>
        <columns>rstk__icfcst_forecast03__c</columns>
        <columns>rstk__icfcst_icitem__c</columns>
        <columns>rstk__icfcst_item__c</columns>
        <columns>rstk__icfcst_supplier__c</columns>
        <filterScope>Everything</filterScope>
        <label>marty</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Upload in Original Format</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>